--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+/*Jordan Schulte*/
 /*Preset Classes*/
 * {
 	margin: 0;
@@ -108,21 +109,23 @@ nav {
 	transition: 0.3s;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	background-color: var(--primary-clr);
 	color: var(--primaryFont-clr);
 	text-align: center;
 }
 .head-title{
-	margin: 20rem 0 0 0;
-	font-size: 40pt;
+	margin: 0 1rem;
+	font-size: min(max(2rem, 4vw), 3rem);
 	font-family: 'Open Sans', sans-serif;
 }
 .head-title span {
 	color: var(--accent-clr);
 }
 .head-paragraph{
-	font-size: 20pt;
-	margin: 3rem 20rem 3rem;
+	font-size: min(max(1.2rem, 2rem), 1.5rem);
+	margin: 3rem 0;
+	width: clamp(300px, 50%, 600px);
 	font-family: 'Hind Siliguri', sans-serif;
 }
 .head-button {
@@ -154,7 +157,7 @@ nav {
 }
 .skills-title {
 	color: var(--primaryFont-clr);
-	font-size: 15pt;
+	font-size: min(max(10pt, 4vw), 1.4rem);
 	margin-bottom: 30px;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -162,6 +165,11 @@ nav {
 	color: var(--accent-clr);
 	font-size: 30pt;
 	margin: 0px 10px;
+	transition: 0.2s all;
+}
+
+.skills-set i:hover{
+	transform: translateY(-5px);
 }
 /*Projects Section*/
 .projects-wrapper{
@@ -174,29 +182,28 @@ nav {
 	border-top: 2px solid var(--accent-clr);
 	border-bottom: 2px solid var(--accent-clr);
 }
-.projects-row{
-	width: 100%;
+.projects-container{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 0 0 50px 0;
+	flex-wrap: wrap;
 }
 .projects-title {
 	color: var(--primaryFont-clr);
-	font-size: 30pt;
+	font-size: min(max(10pt, 8vw), 2.5rem);
 	font-family: 'Open Sans', sans-serif;
 	margin: 0 0 4rem 0;
 }
 .projects-div {
 	height: 400px;
-	width: 400px;
+	width: clamp(200px, 90%, 400px);
 	background-color: var(--primary2-clr);
 	border: 2px solid var(--primary-clr);
 	border-radius: 9px;
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	margin: 50px 50px;
+	margin: 50px 2%;
 	cursor: default;
 	text-align: center;
 	transition: 0.3s ease;
@@ -207,7 +214,7 @@ nav {
 	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.7);
 }
 .projects-img img {
-	width: 400px;
+	width: 100%;
 }
 .projects-text h2{
 	color: var(--accent-clr);
@@ -217,12 +224,13 @@ nav {
 .projects-text {
 	color: var(--primaryFont-clr);
 	text-align: center;
-	margin: 0 10px 25px;
+	margin: 0 10px 30px;
 	height: 150px;
 	font-family: 'Hind Siliguri', sans-serif;
 }
 .projects-text p{
-	margin: 0 0 25px 0;
+	margin: 0 10px 25px;
+	font-size: min(max(5pt, 4vw), 1rem);
 }
 .projects-text span{
 	color: var(--accent-clr);
@@ -288,17 +296,9 @@ nav {
 	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.7);
 	transform: translateY(-5px);
 }
+
 /*Mobile Support*/
 @media screen and (max-width: 640px){
-	.head-paragraph {
-		font-size: 15pt;
-	}
-	.projects-div{
-		width: 400px;
-	}
-	.projects-text{
-		font-size: 11pt;
-	}
 	.btt {
 		right: 5px;
 		bottom: 5px;
@@ -362,24 +362,5 @@ nav {
 		transform: rotate(-45deg) translate(4px, -6px);
 		transition: transform .3s ease;
 	}
-	/*Head Styles*/
-	.head-title{
-		margin: 10rem 20px 0;
-		font-size: 30pt;
-	}
-	.head-paragraph{
-		margin: 50px 20px;
-	}
-	/*Project Styles*/
-	.projects-row{
-		display: flex;
-		margin: 0 0;
-		flex-direction: column;
-	}
 }
-@media screen and (max-width: 1680px){
-	.head-title{
-		margin: 10rem 20px 0;
-		font-size: 30pt;
-	}
-}
+
