--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,6 +101,21 @@ nav {
 	color: var(--accent-clr);
 }
 /*Head Section*/
+#noscript-warning{
+	position: fixed;
+	display: flex;
+	left: 0;
+	top: 8%;
+	color: white;
+	background-color: red;
+	width: 100vw;
+	justify-content: center;
+	align-items: center;
+	font-size: min(max(10rem, 50%), 1.1rem);
+	z-index: 100;
+	font-family: 'Varela Round', sans-serif;
+}
+
 .head-wrapper {
 	width: 100vw;
 	height: 100vh;
