--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,6 +85,12 @@ nav {
 	position: fixed;
 	width: 100%;
 	z-index: 100;
+	border: 2px solid var(--primary2-clr);
+	transition: 0.3s ease-in-out;
+}
+.active{
+	transition: 0.3s ease-in-out;
+	border-bottom-color: var(--accent-clr);
 }
 .nav-links li{
 	list-style-type: none;
@@ -373,6 +379,7 @@ nav {
 	.nav-active {
 		transform: translateX(0);
 		animation: bounce 0.5s;
+		border: 2px solid var(--accent-clr);
 	}
 	@keyframes bounce{
 		0%{
