--- a/CSS/style.css
+++ b/CSS/style.css
@@ -312,18 +312,17 @@ nav {
 .foot-wrapper{
 	background-color: var(--primary2-clr);
 	text-align: center;
-	padding: 2rem;
+	padding: 3rem;
 	position: relative;
 }
 .foot-wrapper h1{
 	color: var(--primaryFont-clr);
 	font-size: 30pt;
-	margin: 0 0 25px;
 	font-family: 'Lobster', sans-serif;
 }
 .foot-wrapper i{
 	color: var(--accent-clr);
-	margin: 0 10px;
+	margin: 2rem 0.5rem;
 	font-size: 30pt;
 	transition: 0.3s ease;
 }
@@ -331,6 +330,12 @@ nav {
 	color: var(--accent100-clr);
 	text-shadow: 0px 8px 5px rgba(0, 0, 0, 0.7);
 	transform: translateY(-5px);
+}
+.copyright{
+	color: var(--primaryFont-clr);
+	font-family: 'Open Sans', sans-serif;
+	cursor: default;
+	user-select: none;
 }
 .btt{
 	position: fixed;
