--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,66 @@ html{
 	--primary-blur: rgba(245, 245, 245, 0.8);
 	--primaryFont-clr: #000;
 }
+.notification-light{
+	-webkit-backdrop-filter: saturate(180%) blur(10px);
+    backdrop-filter: saturate(180%) blur(10px);
+	color: var(--primaryFont-clr);
+	position: fixed;
+	top: 85vh;
+	left: 10px;
+	background-color: var(--primary-blur);
+	padding: 20px;
+	border-radius: 5px;
+	font-family: 'Varela Round', sans-serif;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+	user-select: none;
+	cursor: default;
+	z-index: 1;
+	transform: translateX(-110%);
+}
+.notification-dark{
+	-webkit-backdrop-filter: saturate(180%) blur(10px);
+    backdrop-filter: saturate(180%) blur(10px);
+	color: var(--primaryFont-clr);
+	position: fixed;
+	top: 85vh;
+	left: 10px;
+	background: var(--primary-blur);
+	padding: 20px;
+	border-radius: 5px;
+	font-family: 'Varela Round', sans-serif;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+	user-select: none;
+	cursor: default;
+	z-index: 1;
+	transform: translateX(-110%);
+}
+.notiCall{
+	animation: noti 5s;
+}
+@keyframes noti{
+	0%{
+		transform: translateX(-110%);
+	}
+	25%{
+		transform: translateX(0%);
+	}
+	50%{
+		transform: translateX(0%);
+	}
+	75%{
+		transform: translateX(0%);
+	}
+	100%{
+		transform: translateX(-110%);
+	}
+}
+.p-color{
+	--primaryFont-clr: #000;
+}
+.accent-color{
+	color: var(--accent-clr);
+}
 .theme{
 	position: absolute;
 	right: 5%;
