--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,40 +26,55 @@ body{
 	--primaryFont-clr: #000;
 }
 .notification-dark, .notification-light{
+	background: var(--primary-blur);
 	-webkit-backdrop-filter: saturate(180%) blur(10px);
     backdrop-filter: saturate(180%) blur(10px);
 	color: var(--primaryFont-clr);
 	position: fixed;
-	top: 80vh;
-	left: 10px;
+	top: -10%;
+	left: 50%;
+	transform: translateX(-50%);
 	background-color: var(--primary-blur);
-	padding: 20px;
+	padding: 20px 0;
 	border-radius: 5px;
 	font-family: 'Varela Round', sans-serif;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
 	user-select: none;
 	cursor: default;
-	z-index: 1;
-	transform: translateX(-110%);
+	z-index: 101;
+	text-align: center;
+	width: 350px;
 }
 .notiCall{
-	animation: noti 5s;
+	animation: noti 4s;
 }
 @keyframes noti{
 	0%{
-		transform: translateX(-110%);
+		top: -10%;
 	}
-	25%{
-		transform: translateX(0%);
+	10%{
+		top: 10%;
+	}
+	20%{
+		top: 10%;
+	}
+	30%{
+		top: 10%;
+	}
+	40%{
+		top: 10%;
 	}
 	50%{
-		transform: translateX(0%);
+		top: 10%;
 	}
-	75%{
-		transform: translateX(0%);
+	60%{
+		top: 10%;
+	}
+	70%{
+		top: 10%;
 	}
 	100%{
-		transform: translateX(-110%);
+		top: -10%;
 	}
 }
 .p-color{
@@ -127,8 +142,8 @@ html::-webkit-scrollbar-thumb:hover{
 /*NavColor*/
 nav {
 	background: var(--primary-blur);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
+	-webkit-backdrop-filter: saturate(180%) blur(10px);
+    backdrop-filter: saturate(180%) blur(10px);
 	color: var(--primaryFont-clr);
 	display: flex;
 	justify-content: space-around;
@@ -138,12 +153,15 @@ nav {
 	position: fixed;
 	width: 100%;
 	z-index: 100;
-	border: 2px solid var(--primary2-clr);
+	border-bottom: 2px solid var(--primary-clr);
 	transition: 0.3s ease-in-out;
 }
 .active{
 	transition: 0.3s ease-in-out;
 	border-bottom-color: var(--accent-clr);
+	-webkit-backdrop-filter: saturate(180%) blur(10px);
+	backdrop-filter: saturate(180%) blur(10px);
+	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
 }
 .nav-links li{
 	list-style-type: none;
@@ -427,40 +445,76 @@ nav {
 	.nav-links {
 		position: absolute;
 		background: var(--primary2-clr);
+		-webkit-backdrop-filter: saturate(180%) blur(10px);
+		backdrop-filter: saturate(180%) blur(10px);
 		display: flex;
 		top: 100%;
 		right: 0;
+		width: 100%;
+		padding-top: 50%;
+		height: 100vh;
 		flex-direction: column;
-		justify-content: center;
 		align-items: center;
 		transform: translateX(100%);
 		animation: bounceBack 0.5s;
 	}
+	.nav-links a{
+		font-size: 20pt;
+	}
 	.nav-active {
 		transform: translateX(0);
-		animation: bounce 0.5s;
-		border: 2px solid var(--accent-clr);
+		animation: appear 1s;
+		overflow: hidden;
 	}
-	@keyframes bounce{
+	.fixed-position{
+		overflow: hidden;
+	}
+	@keyframes appear{
 		0%{
-			transform: translateX(100%);
+			opacity: 0;
+			transform: translate(0);
+		}
+		25%{
+			opacity: 0;
+			transform: translate(0);
+		}
+		25%{
+			opacity: 1;
+			transform: translate(0);
 		}
 		50%{
-			transform: translateX(-25%);
+			opacity: 1;
+			transform: translate(0);
+		}
+		75%{
+			opacity: 1;
+			transform: translate(0);
 		}
 		100%{
-			transform: translateX(0);
+			opacity: 1;
+			transform: translate(0);
 		}
 	}
 	@keyframes bounceBack{
 		0%{
-			transform: translateX(0);
+			opacity: 1;
+			transform: translate(0);
+		}
+		25%{
+			opacity: 1;
+			transform: translate(0);
 		}
 		50%{
-			transform: translateX(-25%);
+			opacity: 0;
+			transform: translate(0);
+		}
+		75%{
+			opacity: 0;
+			transform: translate(0);
 		}
 		100%{
-			transform: translateX(100%);
+			opacity: 0;
+			transform: translate(0);
 		}
 	}
 	.nav-links li {
