--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,7 +71,7 @@ body{
 		top: 10%;
 	}
 	70%{
-		top: 10%;
+		top: -10%;
 	}
 	100%{
 		top: -10%;
@@ -141,9 +141,7 @@ html::-webkit-scrollbar-thumb:hover{
 }
 /*NavColor*/
 nav {
-	background: var(--primary-blur);
-	-webkit-backdrop-filter: saturate(180%) blur(10px);
-    backdrop-filter: saturate(180%) blur(10px);
+	background-color: var(--primary2-clr);
 	color: var(--primaryFont-clr);
 	display: flex;
 	justify-content: space-around;
@@ -159,9 +157,10 @@ nav {
 .active{
 	transition: 0.3s ease-in-out;
 	border-bottom-color: var(--accent-clr);
-	-webkit-backdrop-filter: saturate(180%) blur(10px);
-	backdrop-filter: saturate(180%) blur(10px);
 	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+	background: var(--primary-blur);
+	-webkit-backdrop-filter: saturate(180%) blur(10px);
+    backdrop-filter: saturate(180%) blur(10px);
 }
 .nav-links li{
 	list-style-type: none;
@@ -196,7 +195,9 @@ nav {
 .nav-links a:hover {
 	color: var(--accent-clr);
 }
-
+.nav-links:focus{
+	outline: 2px solid var(--accent-clr);
+}
 /*Head Section*/
 #noscript-warning{
 	position: fixed;
@@ -310,7 +311,7 @@ nav {
 }
 .projects-div {
 	height: 400px;
-	width: clamp(200px, 90%, 400px);
+	width: max(400px, 300px);
 	background-color: var(--primary2-clr);
 	border: 2px solid var(--primary-clr);
 	border-radius: 9px;
@@ -322,6 +323,7 @@ nav {
 	text-align: center;
 	transition: 0.3s ease;
 	align-items: center;
+	position: relative;
 }
 .projects-div:hover {
 	border-color: var(--accent-clr);
@@ -330,6 +332,10 @@ nav {
 }
 .projects-img img {
 	width: 100%;
+	height: 35%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 .projects-text h2{
 	color: var(--accent-clr);
@@ -339,9 +345,16 @@ nav {
 }
 .projects-text {
 	color: var(--primaryFont-clr);
-	margin: 10% 10px 35px;
-	height: 150px;
+	height: 65%;
 	font-family: 'Hind Siliguri', sans-serif;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
 }
 .projects-text p{
 	margin: 0 10px 25px;
@@ -445,8 +458,6 @@ nav {
 	.nav-links {
 		position: absolute;
 		background: var(--primary2-clr);
-		-webkit-backdrop-filter: saturate(180%) blur(10px);
-		backdrop-filter: saturate(180%) blur(10px);
 		display: flex;
 		top: 100%;
 		right: 0;
