--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,14 +16,16 @@ body{
 	--primary2-clr: #151a21;
 	--primary-blur: rgba(21, 26, 33, 0.8);
 	--primaryFont-clr: #fff;
-	--accent-clr:  hsl(0, 100%, 65%);
+	--accent-clr:  hsl(0, 98%, 65%);
 	--accent100-clr: hsl(0, 50%, 65%);
+	transition: 0.2s;
 }
 .light-mode{
 	--primary-clr: #fff;
 	--primary2-clr: #f5f5f5;
 	--primary-blur: rgba(245, 245, 245, 0.8);
 	--primaryFont-clr: #000;
+	transition: 0.2s;
 }
 .notification-dark, .notification-light{
 	background: var(--primary-blur);
@@ -102,7 +104,7 @@ html::-webkit-scrollbar {
 	width: 7px;
 }
 html::-webkit-scrollbar-track {
-	background: var(--primary-clr);
+	background: var(--primary2-clr);
 }
 html::-webkit-scrollbar-thumb {
 	background-color: var(--accent-clr);
@@ -152,7 +154,42 @@ nav {
 	width: 100%;
 	z-index: 100;
 	border-bottom: 2px solid var(--primary-clr);
-	transition: 0.3s ease-in-out;
+	transition: 0.2s;
+}
+.navContent{
+	position: relative;
+	display: inline-block;
+}
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background: var(--primary2-clr);
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1000;
+	border: 1px solid var(--accent-clr);
+	user-select: none;
+}
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	padding: 20px 50px;
+	margin: 0 !important;
+	width: 100%;
+	text-align: center;
+	transition: 0.1s !important;
+}
+.dropdown-content a:hover {background: var(--primary-clr); color: var(--accent-clr);}
+
+/* Show the dropdown menu on hover */
+.navContent:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.social-media-links{
+	position: absolute;
+	right: 0;
+	text-align: center;
 }
 .active{
 	transition: 0.3s ease-in-out;
@@ -162,13 +199,14 @@ nav {
 	-webkit-backdrop-filter: saturate(180%) blur(10px);
     backdrop-filter: saturate(180%) blur(10px);
 }
-.nav-links li{
+.nav-links a{
 	list-style-type: none;
 	display: inline-block;
 	margin: 0px 25px;
 }
 .nav-links {
 	cursor: default;
+	position: relative;
 }
 .nav-links a{
 	color: var(--primaryFont-clr);
@@ -186,16 +224,16 @@ nav {
 	margin-left: auto;
 }
 
-.nav-links a:hover::after {
+.nav-item:hover::after {
 	width: 100%;
     transition: 0.2s width;
 	margin: 0 0;
 }
 
-.nav-links a:hover {
+.nav-item:hover {
 	color: var(--accent-clr);
 }
-.nav-links:focus{
+.nav-item:focus{
 	outline: 2px solid var(--accent-clr);
 }
 /*Head Section*/
@@ -275,16 +313,46 @@ nav {
 	margin-bottom: 30px;
 	font-family: 'Open Sans', sans-serif;
 }
-.skills-set i{
-	color: var(--accent-clr);
-	font-size: 30pt;
-	padding: 10px;
-	transition: 0.2s all;
+.skills-set{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
-
-.skills-set i:hover{
-	transform: translateY(-5px);
-	color: var(--accent100-clr);
+.skill-wrap{
+	width: 400px;
+	height: min(300px);
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: center;
+	text-align: center;
+	margin: 0px 25px 50px;
+	box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.2);
+	transition: 0.2s;
+}
+.skill-wrap:hover{
+	transform: translateY(-10px);
+	box-shadow: 0px 0px 0px 2px var(--accent-clr);
+}
+.skill-icon i{
+	color: var(--accent-clr);
+	font-size: 40pt;
+	font-size: min(max(25pt, 4vw), 40pt);
+}
+.skill-title{
+	margin: 25px 10px;
+}
+.skill-title h2{
+	color: var(--accent-clr);
+	font-size: min(max(20pt, 4vw), 25pt);
+	font-family: 'Open Sans', sans-serif;
+}
+.skill-message p{
+	color: var(--primaryFont-clr);
+	margin: 0px 30px;
+	font-size: 13pt;
+	font-family: 'Hind Siliguri', sans-serif;
 }
 /*Projects Section*/
 .projects-wrapper{
@@ -313,7 +381,7 @@ nav {
 	height: 400px;
 	width: max(400px, 300px);
 	background-color: var(--primary2-clr);
-	border: 2px solid var(--primary-clr);
+	border: 2px solid var(--primary2-clr);
 	border-radius: 9px;
 	display: flex;
 	flex-direction: column;
@@ -322,20 +390,51 @@ nav {
 	cursor: default;
 	text-align: center;
 	transition: 0.3s ease;
-	align-items: center;
 	position: relative;
+}
+.projects-tag{
+	color: white;
+	position: absolute;
+	z-index: 1;
+	top: 150px;
+	font-family: 'Open Sans', sans-serif;
+	pointer-events: none;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+.projects-tag div{
+	padding: 2px 10px;
+	border-radius: 50px;
+	margin: 0 5px;
+}
+.newTag{
+	background: red;
+}
+.appTag{
+	background: #FF69B4;
+}
+.webTag{
+	background: #4169e1;
 }
 .projects-div:hover {
 	border-color: var(--accent-clr);
+	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0);
 	transform: translateY(-10px);
-	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.7);
 }
-.projects-img img {
+.projects-div:hover .projects-img img{transform: scale(1.2);}
+.projects-img{
 	width: 100%;
 	height: 35%;
 	position: absolute;
 	top: 0;
 	left: 0;
+	overflow: hidden;
+}
+.projects-img img{
+	width: 100%;
+	height: 100%;
+	transition: 0.3s;
 }
 .projects-text h2{
 	color: var(--accent-clr);
@@ -420,6 +519,19 @@ nav {
 	cursor: default;
 	user-select: none;
 }
+.version a{
+	color: var(--accent-clr);
+	font-family: 'Open Sans', sans-serif;
+	user-select: none;
+	position: absolute;
+	bottom: 10px;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 10pt;
+}
+.version a:hover{
+	color: #666666;
+}
 .btt{
 	position: fixed;
 	right: 5%;
@@ -471,6 +583,7 @@ nav {
 	}
 	.nav-links a{
 		font-size: 20pt;
+		margin: 20px 0;
 	}
 	.nav-active {
 		transform: translateX(0);
