--- a/CSS/style.css
+++ b/CSS/style.css
@@ -91,6 +91,14 @@ body{
 	font-size: 20pt;
 	cursor: pointer;
 }
+@media (hover: hover){
+	.theme:hover{
+		opacity: 0.7;
+	}
+}
+.theme:active{
+	transform: scale(0.8);
+}
 .rotateForward{
 	transform: rotate(360deg);
 	transition: transform .5s;
@@ -232,9 +240,6 @@ nav {
 
 .nav-item:hover {
 	color: var(--accent-clr);
-}
-.nav-item:focus{
-	outline: 2px solid var(--accent-clr);
 }
 /*Head Section*/
 #noscript-warning{
@@ -546,22 +551,22 @@ nav {
 	justify-content: center;
 	text-decoration: none;
 	transform: translateX(500%);
-	transition: transform 1s ease;
+	transition: transform 1s ease, opacity 0.2s ease-in-out;
 }
-
 .btt-active{
 	transform: translateX(0%);
 }
-
+.btt:active{
+	transform: scale(0.9);
+	transition: 0.1s;
+}
 .fa-angle-up{
 	color: white !important;
 	font-size: 25pt;
 }
 @media (hover: hover) {
 	.btt:hover {
-		background-color: var(--accent100-clr);
-		border-color: var(--accent100-clr);
-		transition: 0.2s ease;
+		opacity: 0.7;
 	}
   }
 /*Mobile Support*/
@@ -574,12 +579,15 @@ nav {
 		top: 100%;
 		right: 0;
 		width: 100%;
-		padding-top: 50%;
 		height: 100vh;
 		flex-direction: column;
 		align-items: center;
 		transform: translateX(100%);
 		animation: bounceBack 0.5s;
+		justify-content: center;
+	}
+	.dropdown-content{
+		display: none !important;
 	}
 	.nav-links a{
 		font-size: 20pt;
