--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,13 +18,15 @@ body{
 	--primaryFont-clr: #fff;
 	--accent-clr:  hsl(0, 98%, 65%);
 	--accent100-clr: hsl(0, 50%, 65%);
+	--scroll-bar: #151a21;
 	transition: 0.2s;
 }
 .light-mode{
 	--primary-clr: #fff;
-	--primary2-clr: #f5f5f5;
-	--primary-blur: rgba(245, 245, 245, 0.8);
+	--primary2-clr: #e4e4e4;
+	--primary-blur: rgba(235, 235, 235, 0.8);
 	--primaryFont-clr: #000;
+	--scroll-bar: #e4e4e4;
 	transition: 0.2s;
 }
 .notification-dark, .notification-light{
@@ -112,7 +114,7 @@ html::-webkit-scrollbar {
 	width: 7px;
 }
 html::-webkit-scrollbar-track {
-	background: var(--primary2-clr);
+	background: var(--scroll-bar);
 }
 html::-webkit-scrollbar-thumb {
 	background-color: var(--accent-clr);
