--- a/CSS/style.css
+++ b/CSS/style.css
@@ -181,24 +181,26 @@ nav {
 	z-index: 1000;
 	border: 1px solid var(--accent-clr);
 	user-select: none;
+	padding: 10px;
+	top: 100%;
+	left: 50%;
+	transform: translateX(-50%);
 }
 .dropdown-content a {
 	color: black;
-	padding: 12px 16px;
 	text-decoration: none;
-	padding: 20px 50px;
+	padding: 10px 50px;
 	margin: 0 !important;
 	width: 100%;
 	text-align: center;
 	transition: 0.1s !important;
 }
-.dropdown-content a:hover {background: var(--primary-clr); color: var(--accent-clr);}
+.dropdown-content a:hover {color: var(--accent-clr);}
 
-/* Show the dropdown menu on hover */
 .navContent:hover .dropdown-content {display: block;}
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.navContent:hover .dropbtn {color: var(--accent-clr) !important;}
+
 .social-media-links{
 	position: absolute;
 	right: 0;
@@ -294,17 +296,13 @@ nav {
 	border: 2px solid var(--accent-clr);
 	padding: 15px 45px;
 	border-radius: 50px;
-	transition: all .3s ease;
 	text-decoration: none;
 	font-family: 'Varela Round', sans-serif;
 	text-transform: uppercase;
 }
 @media (hover: hover) {
 	.head-button:hover {
-		background-color: var(--accent100-clr);
-		border-color: var(--accent100-clr);
-		box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.7);
-		transform: translateY(-5px);
+		text-decoration: underline;
 	}
   }
 /*Skills Section*/
@@ -432,10 +430,8 @@ nav {
 }
 .projects-div:hover {
 	border-color: var(--accent-clr);
-	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0);
-	transform: translateY(-10px);
 }
-.projects-div:hover .projects-img img{transform: scale(1.2);}
+.projects-div:hover .projects-img img{transform: scale(1.5);}
 .projects-img{
 	width: 100%;
 	height: 35%;
@@ -509,6 +505,10 @@ nav {
 	text-align: center;
 	padding: 3rem;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 .foot-wrapper h1{
 	color: var(--primaryFont-clr);
@@ -517,14 +517,9 @@ nav {
 }
 .foot-wrapper i{
 	color: var(--accent-clr);
-	margin: 2rem 0.5rem;
+	margin: 0 0.5rem;
 	font-size: 30pt;
 	transition: 0.2s ease;
-}
-.foot-wrapper i:hover{
-	color: var(--accent100-clr);
-	text-shadow: 0px 8px 5px rgba(0, 0, 0, 0.7);
-	transform: translateY(-5px);
 }
 .copyright{
 	color: var(--primaryFont-clr);
@@ -572,11 +567,16 @@ nav {
 	color: white !important;
 	font-size: 25pt;
 }
-@media (hover: hover) {
-	.btt:hover {
-		opacity: 0.7;
-	}
-  }
+.media-a{
+	margin: 2rem 0;
+	height: fit-content;
+}
+.media-a:hover a{
+	opacity: 0.5;
+}
+.media-a a:hover{
+	opacity: 1 !important;
+}
 /*Mobile Support*/
 @media screen and (max-width: 812px){
 	/*Navbar Mobile*/
